--- a/assets/css/black-dashboard.css
+++ b/assets/css/black-dashboard.css
@@ -19106,12 +19106,12 @@ textarea.form-control:active {
 }
 
 .form-group input[type=file] {
-  opacity: 0;
+  /* opacity: 0;
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
-  left: 0;
+  left: 0; */
   width: 100%;
   height: 100%;
   z-index: 100;
